nav bar completed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- main div -->
  <div class="bg-[#FFFFF0] h-screen w-full">
 <!-- nav bar section -->
- <nav class=""></nav>
+ <nav class="flex w-full h-35 py-6 text-8xl text-[#B22222] items-center justify-center">todos</nav>
  </div>
     <script src="script.js"></script>
 </body>
