input box completed and border glowed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
  <div class="bg-[#FFFFF0] h-screen w-full">
 <!-- nav bar section -->
  <nav class="flex w-full h-35 py-6 text-8xl text-[#B22222] items-center justify-center">todos</nav>
- </div>
+ <!-- hero section -->
+  <div class="flex justify-center w-full h-125">
+    <!-- input div -->
+     <div class="flex bg-white h-17 w-135 rounded-none shadow-2xl">
+        <input class="w-135 placeholder-gray-600 px-12 text-2xl italic border border-transparent focus:border-[#B22222] focus:shadow-[0_0_8px_#B22222] focus:outline-none transition-all duration-200" type="text" placeholder="What needs to be done?">
+     </div>
+  </div>
     <script src="script.js"></script>
+</div>
 </body>
 </html>
