--- a/index.html
+++ b/index.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todos</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
+
 <body>
-<!-- main div -->
- <div class="bg-[#FFFFF0] h-screen w-full">
-<!-- nav bar section -->
- <nav class="flex w-full h-35 py-6 text-8xl text-[#B22222] items-center justify-center">todos</nav>
- <!-- hero section -->
-  <div class="flex justify-center w-full h-125">
-    <!-- input div -->
-     <div class="flex bg-white h-17 w-135 rounded-none shadow-2xl">
-        <input class="w-135 placeholder-gray-600 px-12 text-2xl italic border border-transparent focus:border-[#B22222] focus:shadow-[0_0_8px_#B22222] focus:outline-none transition-all duration-200" type="text" placeholder="What needs to be done?">
-     </div>
-  </div>
-    <script src="script.js"></script>
-</div>
+    <!-- main div -->
+    <div class="bg-[#FFFFF0] h-screen w-full">
+        <!-- nav bar section -->
+        <nav class="flex w-full h-35 py-6 text-8xl text-[#B22222] items-center justify-center">todos</nav>
+        <!-- hero section -->
+        <div class="flex justify-center w-full h-125">
+            <!-- input div -->
+            <div class="flex bg-white h-17 w-135 rounded-none shadow-2xl">
+                <input
+                    class="w-135 placeholder-gray-600 px-12 text-2xl italic border border-transparent focus:border-[#B22222] focus:shadow-[0_0_8px_#B22222] focus:outline-none transition-all duration-200"
+                    type="text" placeholder="What needs to be done?">
+            </div>
+            <!-- footer -->
+             <div class="flex flex-col absolute top-70 w-full items-center justify-center text-sm text-gray-700 gap-1">
+                <P>Double click to edit a todo</P>
+                <p>Created by the TodoMVC Team</p>
+                <p>Part of TodoMVC</p>
+             </div>
+        </div>
+        <script src="script.js"></script>
+    </div>
 </body>
+
 </html>
