--- a/index.html
+++ b/index.html
@@ -17,9 +17,26 @@
         <div class="flex justify-center w-full h-125">
             <!-- input div -->
             <div class="flex bg-white h-17 w-135 rounded-none shadow-2xl">
-                <input
+                <!-- input to add new tasks -->
+                <input id="todoInput"
                     class="w-135 placeholder-gray-600 px-12 text-2xl italic border border-transparent focus:border-[#B22222] focus:shadow-[0_0_8px_#B22222] focus:outline-none transition-all duration-200"
                     type="text" placeholder="What needs to be done?">
+
+                    <!-- dropdown box to filter todos -->
+                     <div class="flex justify-center w-full">
+                        <select id="todoFilter" class="border border-gray-300 rounded-md px-4 py-2 text-lg">
+                            <option value="all">All</option>
+                            <option value="active">Active</option>
+                            <option value="completed">Completed</option>
+                        </select>
+                     </div>
+                     
+                     <!-- container Active and completed items -->
+                      <div class="todo-list-container"> 
+                        <div class="todo-list"></div>
+                        <div class="completed-list"></div>
+                      </div>
+
             </div>
             <!-- footer -->
              <div class="flex flex-col absolute top-70 w-full items-center justify-center text-sm text-gray-700 gap-1">
