script.js started

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
          </div>
 
-          <!-- filter todos -->
-                 <div class="flex bg-white h-11 w-135 absolute top-53 py-2 px-2 justify-center gap-2">
+          <!--  todos filter-->
+                 <div id="todoFilter" class="flex bg-white h-11 w-135 absolute top-53 py-2 px-2 justify-center gap-2">
                     <button id="btn_all" class="px-2 py-1 border flex items-center justify-center border-transparent hover:border-[#B22222] focus:border-[#B22222] focus:shadow-[0_0_8px_#B22222] focus:transition-all duration-200">All</button>
                      <button id="btn_active" class="px-2 py-1 border border-red-600 flex items-center justify-center border-transparent hover:border-[#B22222] focus:border-[#B22222] focus:shadow-[0_0_8px_#B22222] focus:transition-all duration-200">Active</button>
                      <button id="btn_completed" class="px-2 py-1 border border-red-600 flex items-center justify-center border-transparent hover:border-[#B22222] focus:border-[#B22222] focus:shadow-[0_0_8px_#B22222] focus:transition-all duration-200">Completed</button>
@@ -47,8 +47,8 @@
                 <p>Part of TodoMVC</p>
         </div>
         </div>
-        <script src="script.js"></script>
+       
     </div>
+       <script src="script.js"></script>
 </body>
-
 </html>
