created function to add a new todo item

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                     
                <!-- div to store todo lists -->
-                <div class="todo_lists_container">
+                <div class="todo_lists_container absolute">
                     <ul id="allTasks" class="todo_lists mb-4"></ul>
                     <ul id="activeTasks" class="todo_lists mb-4"></ul>
                     <ul id="completedTasks" class="todo_lists"></ul>
